# civic-data-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
civic_data_server/: __main__.py  server.py
civic_data_server/tools/: __init__.py  analyse_tabular_data.py  get_csv_text_by_resource_id.py  get_dataset_info.py  get_resource_content.py  run_python.py  search_datasets.py  search_resources.py
