[project]
name = "civic-data-server"
version = "0.1.0"
description = "MCP server for the LCR Digital Commons"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.4",
    "requests>=2.32.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.26.3",
    "google-genai>=1.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "plotly>=6.3.0",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "pydantic>=2.7",
]
